# msvcpp-normalize-pe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test-windows.yml  test.yml
docs/source/: conf.py  developer-guide.rst  index.rst  technical-details.rst  user-guide.rst
src/msvc_pe_patcher/: __init__.py  __main__.py  cli.py  patcher.py
src/msvcpp_normalize_pe/: __init__.py  cli.py
tests/fixtures/: README.md
tests/fixtures/references/: README.md
tests/fixtures/sources/: README.md
tests/integration/: test_real_pe_files.py
tests/property/: test_pe_validity.py
tests/unit/: test_helpers.py  test_patcher.py
